# mnemos-ic-runtime

./: .gitlab-ci.yml  CAPABILITIES.md  CHANGELOG.md  Dockerfile  README.md  SKILL.md  STONKMODE.md  compose.yml  install.yaml
agent-skills/claude-code/: INSTALL.md  SKILL.md  manifest-template.json
agent-skills/claude-desktop/: INSTALL.md  SKILL.md  config-snippet.json
agent-skills/hermes/: DESCRIPTION.md  INSTALL.md  SKILL.md  config-snippet.yaml
agent-skills/openclaw/: INSTALL.md  SKILL.md  config-snippet.json5
agent-skills/zeroclaw/: INSTALL.md  SKILL.md  (+2 more)
bridge/: pyproject.toml
bridge/investorclaw_bridge/: bundle.py  bundle_schema.py  dashboard.py  mcp_server.py  portfolio_templates.py  provider_diagnostics.py  provider_routing.py  serve.py  setup_api.py
bridge/investorclaw_bridge/mcp/: __init__.py  _runtime.py  transport.py
bridge/investorclaw_bridge/mcp/tools/: __init__.py  keys.py  portfolio.py  responses.py  upgrade.py
bridge/patches/: lazy_matplotlib_optimize.py
docs/: 2026-05-01-dockerized-skill-convention.md  COBOL_TESTING.md  EOD_REPORT.md  GLOSSARY.md  INSTALL_MODELS.md  MCP_TOOLS_REFERENCE.md  STONKMODE_ARCHITECTURE.md  STONKMODE_AVATAR_LEGEND.md  WINDOWS_SETUP_GUIDE.md  ZEROCLAW_MCP_INTEGRATION.md
quadlets/: ic-engine.container
sbom/: ic-engine-4.0-cpu.bom.md  ic-engine-4.0-cpu.spdx.json
tests/: test_dashboard_settings.py  test_keys.py  test_keys_recommend.py  test_mcp_server_envelope.py  test_portfolio_templates.py  test_provider_diagnostics.py  test_provider_routing.py  test_upgrade.py
tools/: cobol_barrage_v4.py  generate_sbom.py
