# SPDX-License-Identifier: Apache-2.0
[project]
name = "investorclaw-bridge"
version = "4.0.0a1"
description = "InvestorClaw v4.0 bridge: ic-engine MCP-HTTP server + dashboard + MnemosClient"
authors = [
    { name = "InvestorClaw Contributors" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"

dependencies = [
    # ic-engine (pulled into the container by Dockerfile, not pinned here)
    # FastAPI for the MCP-HTTP server + dashboard
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Required by FastAPI for multipart/form-data uploads
    # (browser portfolio upload on /dashboard/upload).
    "python-multipart>=0.0.9",
    # FastMCP / MCP Python SDK
    "mcp>=1.4",
    # HTTP client for MnemosClient
    "httpx>=0.28",
    # Sqlite (stdlib, but use SQLAlchemy for query layer)
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    # Bundle.json schema validation
    "pydantic>=2.10",
    # Structured logging
    "structlog>=24.4",
]

[project.scripts]
investorclaw-bridge = "investorclaw_bridge.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["investorclaw_bridge"]
